position & color lang switch; "next interview" linebreaks

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,16 @@
 
                 <div class="h-8"></div>
 
+                <div
+                    data-lang-key="nav-english"
+                    id="languageSwitch"
+                    class="cursor-pointer self-end bg-[rgb(51,_51,_51)] p-1 font-crimson-text text-3xl font-medium text-white hover:underline md:mr-1 lg:mr-0"
+                >
+                    English
+                </div>
+
+                <div class="h-8"></div>
+
                 <nav class="min-w-fit font-crimson-text text-3xl font-medium">
                     <a href="./html/project.html" alt="Project">
                         <div data-lang-key="nav-project" class="py-1 pl-1 text-[rgb(51,_51,_51)] hover:underline">Projekt</div>
@@ -49,14 +59,6 @@
                     <a href="./html/about.html" alt="About">
                         <div data-lang-key="nav-about" class="py-1 pl-1 text-[rgb(51,_51,_51)] hover:underline">Über uns</div>
                     </a>
-
-                    <div
-                        data-lang-key="nav-english"
-                        id="languageSwitch"
-                        class="cursor-pointer py-1 pl-1 text-[rgb(51,_51,_51)] hover:underline"
-                    >
-                        English
-                    </div>
                 </nav>
             </div>
         </div>
