ve's and about in english

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -14,9 +14,11 @@
                 class="flex h-full w-full flex-col flex-wrap items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
             >
                 <div class="flex h-fit w-full flex-col justify-start md:w-1/2 md:pr-6">
-                    <p class="text-left text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
+                    <p data-lang-key="about-1" class="text-left text-red-800">
+                        Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs
+                    </p>
 
-                    <p class="text-left text-red-800 underline">Ausstellungen und Nominierungen</p>
+                    <p data-lang-key="about-2" class="text-left text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
 
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
@@ -38,12 +40,12 @@
                 </div>
 
                 <div class="h-fit w-full pt-4 md:order-1 md:w-1/2 md:pl-6 md:pt-0">
-                    <p class="text-red-800 underline">Kontakt</p>
+                    <p data-lang-key="about-3" class="text-red-800 underline">Kontakt</p>
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
 
-                    <p class="text-left text-red-800 underline">Biografien</p>
-                    <p>
+                    <p data-lang-key="about-4" class="text-left text-red-800 underline">Biografien</p>
+                    <p data-lang-key="about-5">
                         Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
                         zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
                         aufgewachsen, den es nicht mehr gibt, der DDR. Beide leben jetzt in Berlin. Martina hat einen BA in Moderner und
@@ -57,7 +59,7 @@
 
                 <div class="mt-8 flex w-full md:order-last md:mt-4 md:pl-12">
                     <div class="ml-auto w-full md:w-1/2">
-                        <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
+                        <div data-lang-key="about-6">Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
                         <!-- AAS -->
 
                         <div class="my-4 w-full">
@@ -65,7 +67,7 @@
                                 <img class="mx-auto w-1/2" src="/public/images/Logo-AAS-1.jpg" />
                             </a>
                         </div>
-                        <div>
+                        <div data-lang-key="about-7">
                             und mit der Untersützung der
                             <a
                                 class="w-1/2"
