--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -28,7 +28,7 @@
                     <div
                         class="relative mx-auto flex min-h-min w-4/5 basis-1/2 flex-col items-start justify-center md:mx-0 md:w-auto md:pr-20"
                     >
-                        <span class="text-left">
+                        <span data-lang-key="ve2-1" class="text-left">
                             Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der
                             Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
                         </span>
@@ -37,7 +37,7 @@
                         <div class="mx-auto w-4/5 pt-2 md:w-3/5 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve2-1", "author": "", "title": "", "audioFilePath": "../../../public/audio/01_J_R_01.mp3"}'
+                                locals='{"id": "", "author": "", "title": "", "audioFilePath": "../../../public/audio/01_J_R_01.mp3"}'
                             ></include>
                         </div>
                     </div>
@@ -50,7 +50,9 @@
                         <!-- Plattenbauten mittelhoch -->
                         <div class="relative aspect-3/2 w-full pt-8">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_07.jpg" />
-                            <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Detlev Konnerth</span>
+                            <span class="absolute w-full text-right text-xs"
+                                ><span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth</span
+                            >
                         </div>
                     </div>
                 </div>
@@ -66,7 +68,7 @@
                         <div class="mx-auto w-3/5 pt-8 md:w-4/5 md:pb-24 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve2-2", "author": "", "audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
+                                locals='{"id": "mm04", "author": "", "audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
                             >
                             </include>
                         </div>
@@ -88,7 +90,7 @@
                     </div>
                     <div class="mx-auto mt-auto w-4/5 pt-4 md:mx-0 md:w-1/3 md:translate-y-1/2 md:pt-0">
                         <!-- Text "Damals in der DDR hat man.."  -->
-                        <span>
+                        <span data-lang-key="ve2-2">
                             Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
                             Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“ oder: „Es kommt die
                             Kohle“. Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir wollten
@@ -109,7 +111,7 @@
                         <div class="z-10 hidden w-full translate-y-[195%] md:block">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve2-3", "author": "", "audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
+                                locals='{"id": "a_d01", "author": "", "audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
                             >
                             </include>
                         </div>
@@ -120,7 +122,7 @@
                         <div class="mx-auto w-3/5 md:w-1/3">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve2-4", "author": "", "audioFilePath": "../../../public/audio/OT_01.mp3", "title": "es war nicht böse gemeint"}'
+                                locals='{"id": "ot01", "author": "", "audioFilePath": "../../../public/audio/OT_01.mp3", "title": "es war nicht böse gemeint"}'
                             >
                             </include>
                         </div>
@@ -136,7 +138,7 @@
 
                 <div class="relative flex h-fit w-full flex-col pb-20 pt-8 md:pt-64">
                     <div class="flex w-full flex-col items-end justify-start">
-                        <div class="mx-auto w-4/5 md:mx-0 md:w-2/5">
+                        <div data-lang-key="ve2-3" class="mx-auto w-4/5 md:mx-0 md:w-2/5">
                             Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die
                             sagen sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht
                             gemocht“.
@@ -144,13 +146,14 @@
                         </div>
                         <div class="mx-auto w-[90%] text-left md:mx-0 md:w-full md:text-right">
                             <span
+                                data-lang-key="ve2-4"
                                 class="font-roboto text-7xl font-medium leading-none text-red-700 md:whitespace-nowrap md:text-[6vw] md:leading-snug lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
                             >
                                 WEIL DU SCHWARZ BIST
                             </span>
                         </div>
-                        <span class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Wir hatten Angst.</span>
-                        <span class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Das war in Berlin 1982-1983.</span>
+                        <span data-lang-key="ve2-5" class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Wir hatten Angst.</span>
+                        <span data-lang-key="ve2-6" class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Das war in Berlin 1982-1983.</span>
                     </div>
 
                     <div class="-z-10 mx-auto w-4/5 pt-4 md:mx-0 md:w-3/5 md:pr-12 md:pt-0">
@@ -164,7 +167,9 @@
 
                 <div class="-mx-0.5 flex items-center justify-end md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                        <span data-lang-key="ve-next" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur nächsten Seite</span
+                        >
                     </a>
                 </div>
             </main>
