--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -30,7 +30,7 @@
                         <div class="z-20 mx-auto flex w-4/5 md:mx-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve3-1", "author": "", "audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                                locals='{"id": "a_d02", "author": "", "audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
                         </div>
@@ -53,7 +53,7 @@
 
                         <div class="w-4/5 pt-8 md:translate-x-[15%] md:pt-0">
                             <!-- Text "Meine Arbeit nehmen die.."  -->
-                            <span>
+                            <span data-lang-key="ve3-1">
                                 „Meine Arbeit nehmen die mir jetzt weg!“ Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
                                 arbeitslos. Die Arbeit gab’s ja gar nicht mehr.
                             </span>
@@ -63,7 +63,7 @@
                                 <div class="ml-auto flex w-3/5 md:mx-auto">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ve3-2", "author": "", "audioFilePath": "../../../public/audio/02_A_D_03.mp3", "title": ""}'
+                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/02_A_D_03.mp3", "title": ""}'
                                     >
                                     </include>
                                 </div>
@@ -78,7 +78,7 @@
                         <div class="flex w-full md:-translate-x-[10%]">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve3-3", "author": "", "audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
+                                locals='{"id": "mm01", "author": "", "audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
                             >
                             </include>
                         </div>
@@ -94,6 +94,7 @@
                 <div class="relative mt-[-60%] h-fit w-full pt-8 sm:mt-[-15%] md:-mt-0 md:pt-24">
                     <div class="z-20 w-full md:w-4/5">
                         <span
+                            data-lang-key="ve3-2"
                             class="inline-block translate-y-1/2 text-left font-roboto text-7xl font-medium text-red-700 md:inline md:-translate-x-[10%] md:translate-y-0"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
@@ -104,7 +105,7 @@
                         >
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve3-4", "author": "", "audioFilePath": "../../../public/audio/OT_04.mp3", "title": ""}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/OT_04.mp3", "title": ""}'
                             >
                             </include>
                         </div>
@@ -124,11 +125,14 @@
                         <!-- Fresse 1 -->
                         <div class="relative order-2 aspect-3/2 w-full overflow-hidden md:order-1 md:-translate-y-[40%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_018.jpg" class="object-cover" />
-                            <span class="absolute w-full text-left text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
+                            <span class="absolute w-full text-left text-xs"
+                                ><span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Christian Ditsch</span
+                            >
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
                         <span
+                            data-lang-key="ve3-3"
                             class="order-1 w-4/5 pb-4 pt-8 md:order-2 md:w-10/12 md:translate-x-[20%] md:translate-y-full md:pb-0 md:pt-0"
                         >
                             Dass Deutschland einig wird, das hört man schon '89 … vom Fernsehen und von der Straße, die Deutschen
@@ -142,13 +146,17 @@
                         <!-- Fresse 2 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_019.jpg" class="object-cover" />
-                            <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
+                            <span class="absolute w-full text-right text-xs"
+                                ><span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Christian Ditsch</span
+                            >
                         </div>
                         <div class="h-6"></div>
                         <!-- Fresse 3 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_020.jpg" class="object-cover" />
-                            <span class="absolute w-full text-right text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
+                            <span class="absolute w-full text-right text-xs"
+                                ><span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Christian Ditsch</span
+                            >
                         </div>
                     </div>
                 </div>
@@ -177,14 +185,14 @@
                                 <div class="m-auto flex w-2/3">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ve3-5", "author": "", "audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                                        locals='{"id": "ajm03", "author": "", "audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
                                     >
                                     </include>
                                 </div>
                             </div>
                         </div>
 
-                        <span class="mx-auto w-4/5 pt-8 text-left md:pt-32">
+                        <span data-lang-key="ve3-4" class="mx-auto w-4/5 pt-8 text-left md:pt-32">
                             Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von
                             drüben und haben uns erst mal geschult. Wir mussten praktisch die Ausbildung noch mal neu machen, damit wir
                             überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch … auch so verletzend. Wir hatten ja
@@ -199,10 +207,14 @@
 
                 <div class="-mx-0.5 flex translate-y-[130%] items-center justify-between md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve2.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
+                        <span data-lang-key="ve-prev" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur vorherigen Seite</span
+                        >
                     </a>
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve4.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                        <span data-lang-key="ve-next" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur nächsten Seite</span
+                        >
                     </a>
                 </div>
             </main>
