--- a/src/html/virtual-exhibits/ve5.html
+++ b/src/html/virtual-exhibits/ve5.html
@@ -39,7 +39,7 @@
                     >
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"id": "ve5-1", "author": "", "audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
+                            locals='{"id": "dm01", "author": "", "audioFilePath": "../../../public/audio/DM_01.mp3", "title": "wie ein Theater beobachtet"}'
                         >
                         </include>
                     </div>
@@ -48,17 +48,17 @@
                 <div class="flex h-fit w-full">
                     <div class="mx-auto flex w-full flex-col items-center justify-between pt-2 md:mx-0 md:w-full md:flex-row md:pt-32">
                         <!-- Fingerzeig-->
-                        <div class="mx-auto aspect-2/3 w-3/4 overflow-hidden object-cover pt-8 md:mx-0 md:w-2/3 md:pt-0">
+                        <div class="mx-auto aspect-2/3 w-3/4 overflow-hidden object-cover pt-8 md:mx-0 md:w-1/2 md:pt-0">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_052.jpg" />
                         </div>
 
-                        <div class="w-3/5 pt-8 md:w-1/3 md:pl-3 md:pt-0">
-                            <div class="text-left">
+                        <div class="w-3/5 pt-8 md:w-1/3 md:pr-5 md:pt-0">
+                            <div data-lang-key="ve5-1" class="text-left">
                                 Hier ist uns nichts passiert, den Anschlag in Rostock-Lichtenhagen haben wir nur im Fernsehen mitbekommen.
                                 Hier auf der Straſe wurde uns nur von Weitem zugerufen "Ausländer raus".
                             </div>
                             <div class="h-4"></div>
-                            <div class="text-left">Aber das ist normal.</div>
+                            <div data-lang-key="ve5-2" class="text-left">Aber das ist normal.</div>
                         </div>
                     </div>
                 </div>
@@ -66,12 +66,12 @@
                 <div class="flex h-fit w-full pt-8 md:pt-0">
                     <div class="relative flex w-full flex-col-reverse items-center justify-between pt-8 md:flex-row md:items-end md:pt-24">
                         <div class="w-3/5 pt-8 md:mr-[10%] md:w-1/3 md:translate-y-1/3 md:pt-0">
-                            <div class="text-left">
+                            <div data-lang-key="ve5-3" class="text-left">
                                 Im Oktober mussten wir aus dem Wohnheim raus, wir sind in einem Bus eingestiegen, nach Frankurt am Main
                                 gefahren worden und von dort zurück nach Mosambik dann.
                             </div>
                             <div class="h-4"></div>
-                            <div class="text-left">
+                            <div data-lang-key="ve5-4" class="text-left">
                                 Wir waren alle traurig, niemand hat sich unterhalten. Jeder hat an seinem Platz gesessen und überlegt. Was
                                 wird wohl mit uns jetzt, wenn wir zurück nach Mosambik kommen, denn in Mosambik war Bürgerkrieg.
                             </div>
@@ -96,10 +96,10 @@
                         <div class="flex flex-col items-center pt-16 md:-translate-y-[15%] md:flex-row md:items-start md:pt-0">
                             <div class="flex w-full flex-col items-center md:w-3/5 md:items-start">
                                 <!-- Audio "mm 02" -->
-                                <div class="z-40 mx-auto w-2/5 md:w-1/5 md:translate-y-1/2">
+                                <div class="z-40 mx-auto w-2/5 md:w-1/4 md:translate-y-1/2">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ve5-2", "author": "", "audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
+                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_02.mp3", "title": ""}'
                                     >
                                     </include>
                                 </div>
@@ -109,12 +109,14 @@
                                 </div>
                             </div>
 
-                            <div class="flex w-3/5 items-start justify-end md:w-2/5 md:flex-col">
+                            <div
+                                class="flex w-3/5 items-start justify-end md:w-2/5 md:-translate-x-[15%] md:translate-y-[600%] md:flex-col"
+                            >
                                 <!-- Audio "Für mich war das ein Unfall" -->
-                                <div class="mx-auto w-full md:-translate-x-[15%] md:-translate-y-1/2">
+                                <div class="mx-auto w-full">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ve5-3", "author": "", "audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
+                                        locals='{"id": "ks01", "author": "", "audioFilePath": "../../../public/audio/KS_01.mp3", "title": "für mich war das ein Unfall"}'
                                     >
                                     </include>
                                 </div>
@@ -130,7 +132,7 @@
                             <div class="mx-auto w-2/3 pt-12 md:mr-[100%] md:w-4/5 md:-translate-y-full md:pt-0">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "ve5-4", "author": "", "audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
+                                    locals='{"id": "jr03", "author": "", "audioFilePath": "../../../public/audio/J_R_03.mp3", "title": "Hoyerswerda hat den Anfang gemacht"}'
                                 >
                                 </include>
                             </div>
@@ -160,7 +162,7 @@
                         <div class="mx-auto w-4/5 md:-translate-y-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve5-5", "author": "", "audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
+                                locals='{"id": "b_l02", "author": "", "audioFilePath": "../../../public/audio/B_L_02.mp3", "title": "Heimat hin oder her"}'
                             >
                             </include>
                         </div>
@@ -169,20 +171,18 @@
 
                 <div class="h-fit w-full pt-8 md:w-1/3 md:pt-44">
                     <div class="flex flex-col items-center justify-between md:-translate-x-[5%] md:items-stretch md:justify-start">
-                        <div class="w-3/5 text-left md:w-auto">Die Polizei ist so aggressiv heute.</div>
-                        <!-- <div class="h-4"></div> -->
-                        <div class="w-3/5 text-left md:w-auto">
-                            Ich weiß nicht was sie für Idee oder welche Orientierung die haben. Damals, in der DDR, gab es solche Sachen
-                            nicht, mit der Polizei hatten wir keine Probleme. Wenn ich heute ein Problem habe, muss ich selber was
-                            unternehmen, selber was tun bevor es zu spät ist. Ich kann nicht warten bis die Polizei hilft, wenn etwas in
-                            Richtung Rassimus passiert. Ich merke, dass auch die Polizisten nicht wollen, dass wir hier in Deutschland sind.
-                            Deshalb ist die Polizei nichts für mich.
+                        <div data-lang-key="ve5-5" class="w-3/5 text-left md:w-auto">
+                            Die Polizei ist so aggressiv heute.<br />Ich weiß nicht was sie für Idee oder welche Orientierung die haben.
+                            Damals, in der DDR, gab es solche Sachen nicht, mit der Polizei hatten wir keine Probleme. Wenn ich heute ein
+                            Problem habe, muss ich selber was unternehmen, selber was tun bevor es zu spät ist. Ich kann nicht warten bis
+                            die Polizei hilft, wenn etwas in Richtung Rassimus passiert. Ich merke, dass auch die Polizisten nicht wollen,
+                            dass wir hier in Deutschland sind. Deshalb ist die Polizei nichts für mich.
                         </div>
                         <!-- Audio "mm03" -->
                         <div class="mx-auto w-1/2 pt-8 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve5-6", "author": "", "audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
+                                locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/MM_03.mp3", "title": ""}'
                             >
                             </include>
                         </div>
@@ -195,7 +195,7 @@
                         <div class="mx-auto w-3/5 pt-8 md:mr-auto md:w-4/5 md:-translate-y-[250%] md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve5-7", "author": "", "audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
+                                locals='{"id": "dm04", "author": "", "audioFilePath": "../../../public/audio/DM_04.mp3", "title": "ich war ein richtiger Sklave"}'
                             >
                             </include>
                         </div>
@@ -227,7 +227,7 @@
                     </div>
 
                     <div class="flex flex-col items-center justify-center pt-24 md:w-1/2 md:pt-0">
-                        <div class="w-4/5 text-left md:h-1/2">
+                        <div data-lang-key="ve5-6" class="w-4/5 text-left md:h-1/2">
                             Ich fahre nach wie vor gerne nach Lichtenhagen. Wenn ich das Sonnenblumenhochhaus jetzt betrachte, wenn ich da
                             vorbei fahre, sehe ich das jetzt nicht im Zusammenhang mit dem was da passiert ist. Das... dieses
                             Sonnenblumenhochhaus ist genau so... genau dieses Motiv, diese Sonnenblume, ist irgendwo Kunst. Für mich ist das
@@ -240,10 +240,14 @@
 
                 <div class="-mx-0.5 flex translate-y-[120%] items-center justify-between md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve4.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
+                        <span data-lang-key="ve-prev" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur vorherigen Seite</span
+                        >
                     </a>
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve2.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                        <span data-lang-key="ve-next" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur nächsten Seite</span
+                        >
                     </a>
                 </div>
             </main>
