--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -37,7 +37,7 @@
                         <!-- Audio "die ganze Struktur zerbrach" -->
                         <include
                             src="./partials/interview_audio.html"
-                            locals='{"id": "ve4-1", "author": "", "audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
+                            locals='{"id": "a_d04", "author": "", "audioFilePath": "../../../public/audio/01_die_ganze_Struktur_zerbrach.mp3", "title": "die ganze Struktur zerbrach"}'
                         >
                         </include>
                     </div>
@@ -51,7 +51,7 @@
                             <div class="h-fit md:absolute md:top-1/2 md:w-1/2 md:-translate-y-1/2">
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "ve4-2", "author": "", "audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
+                                    locals='{"id": "a_d05", "author": "", "audioFilePath": "../../../public/audio/02_das_nahm_ja_so_Überhand.mp3", "title": "das nahm ja so Überhand"}'
                                 >
                                 </include>
                             </div>
@@ -69,7 +69,9 @@
                         <!-- Scherben -->
                         <div class="mx-auto aspect-3/2 w-full md:mx-0">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_025.jpg" />
-                            <span class="absolute w-full text-left text-xs">mit freundlicher Genehmigung von Umbruch Bildarchiv</span>
+                            <span class="absolute w-full text-left text-xs"
+                                ><span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Umbruch Bildarchiv</span
+                            >
                         </div>
 
                         <!-- Audio "Besuch bekommen" -->
@@ -78,7 +80,7 @@
                         >
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve4-3", "author": "", "audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
+                                locals='{"id": "dm02", "author": "", "audioFilePath": "../../../public/audio/03_Besuch_bekommen.mp3", "title": "Besuch bekommen"}'
                             >
                             </include>
                         </div>
@@ -86,17 +88,17 @@
                 </div>
 
                 <div class="flex h-fit w-full flex-col items-end justify-start md:py-32">
-                    <span class="mx-auto block w-4/5 text-left md:mx-0 md:w-1/2 lg:w-1/3"
+                    <span data-lang-key="ve4-1" class="mx-auto block w-4/5 text-left md:mx-0 md:w-1/2 lg:w-1/3"
                         >Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung.</span
                     >
                     <div class="mx-auto w-4/5 md:mx-0 md:w-full">
                         <span
+                            data-lang-key="ve4-2"
                             class="font-roboto text-[16vw] font-medium leading-none text-red-700 sm:text-[7.25vw] md:whitespace-nowrap md:text-[6vw] md:leading-snug lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
+                            >WIR KOMMEN NICHT RAUS!</span
                         >
-                            WIR KOMMEN NICHT RAUS!
-                        </span>
                     </div>
-                    <span class="mx-auto block w-4/5 text-left md:mx-0 md:w-1/2 lg:w-1/3">
+                    <span data-lang-key="ve4-3" class="mx-auto block w-4/5 text-left md:mx-0 md:w-1/2 lg:w-1/3">
                         Die Gefahr war schon da, in den Wohnheimen, wo so viele Vietnamesen und Ausländer gesammelt gewohnt haben. Aber ich
                         hatte schon eine eigene Wohnung … da hatte ich Glück, in dem Fall. Die Nazis kommen nicht in die deutschen Blöcke.
                         Nur zu den Wohnheimen, den Ausländerwohnheimen, da kommen die hin. Das habe ich von unsere Leute gehört … es war
@@ -109,7 +111,9 @@
                         <!-- Bus 1 -->
                         <div class="relative aspect-3/2 w-full md:-translate-y-2/3">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_026.jpg" />
-                            <span class="absolute w-full text-left text-xs"> mit freundlicher Genehmigung von Detlev Konnerth </span>
+                            <span class="absolute w-full text-left text-xs">
+                                <span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth
+                            </span>
                         </div>
                     </div>
                     <div class="w-full pt-8 md:w-1/2 md:pt-0">
@@ -117,7 +121,7 @@
                         <div class="relative aspect-3/2 w-full md:-translate-x-[10%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_027.jpg" class="object-cover" />
                             <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Konnerth
+                                <span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth
                             </div>
                         </div>
                     </div>
@@ -141,7 +145,7 @@
                         <div class="mx-auto w-3/5 -translate-y-1/2 md:absolute md:left-1/2 md:mx-0 md:w-5/6 md:-translate-x-1/2">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve4-4", "author": "", "audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
+                                locals='{"id": "a_d06", "author": "", "audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
                             >
                             </include>
                         </div>
@@ -154,7 +158,7 @@
                         <div class="relative order-2 aspect-[15/9] w-full md:order-1 md:-translate-y-[110%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="object-cover" />
                             <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Konnerth
+                                <span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth
                             </div>
                         </div>
 
@@ -171,7 +175,7 @@
                             >
                                 <include
                                     src="./partials/interview_audio.html"
-                                    locals='{"id": "ve4-5", "author": "", "audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
+                                    locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
                                 >
                                 </include>
                             </div>
@@ -185,7 +189,7 @@
                         <div class="relative aspect-3/2 w-full pb-0 md:pb-8">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_031.jpg" />
                             <div class="absolute z-10 w-full overflow-visible text-right text-xs">
-                                mit freundlicher Genehmigung von Detlev Konnerth
+                                <span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth
                             </div>
                         </div>
 
@@ -194,7 +198,7 @@
                             <div class="absolute">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_032.jpg" />
                                 <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
-                                    mit freundlicher Genehmigung von Detlev Konnerth
+                                    <span data-lang-key="ve-permission">mit freundlicher Genehmigung von</span> Detlev Konnerth
                                 </div>
                             </div>
                         </div>
@@ -203,7 +207,7 @@
                         <div class="mx-auto w-3/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-4/5 md:translate-x-[15%]">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "ve4-6", "author": "", "audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
+                                locals='{"id": "jr02", "author": "", "audioFilePath": "../../../public/audio/06_es_gab_keine_Grenze.mp3", "title": "es gab keine Grenze"}'
                             >
                             </include>
                         </div>
@@ -221,10 +225,14 @@
 
                 <div class="-mx-0.5 flex translate-y-[120%] items-center justify-between md:hidden">
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
+                        <span data-lang-key="ve-prev" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur vorherigen Seite</span
+                        >
                     </a>
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve5.html">
-                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                        <span data-lang-key="ve-next" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+                            >zur nächsten Seite</span
+                        >
                     </a>
                 </div>
             </main>
