superfluous audio files deleted

--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -30,7 +30,7 @@
                         <div class="z-20 mx-auto flex w-4/5 md:mx-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "a_d02", "author": "", "audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
+                                locals='{"id": "a_d02", "author": "", "audioFilePath": "../../../public/audio/A_D_02.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
                         </div>
@@ -63,7 +63,7 @@
                                 <div class="ml-auto flex w-3/5 md:mx-auto">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/02_A_D_03.mp3", "title": ""}'
+                                        locals='{"id": "", "author": "", "audioFilePath": "../../../public/audio/A_D_03.mp3", "title": ""}'
                                     >
                                     </include>
                                 </div>
@@ -78,7 +78,7 @@
                         <div class="flex w-full md:-translate-x-[10%]">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "mm01", "author": "", "audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
+                                locals='{"id": "mm01", "author": "", "audioFilePath": "../../../public/audio/MM_01.mp3", "title": "der Rassismus wurde noch stärker"}'
                             >
                             </include>
                         </div>
@@ -185,7 +185,7 @@
                                 <div class="m-auto flex w-2/3">
                                     <include
                                         src="./partials/interview_audio.html"
-                                        locals='{"id": "ajm03", "author": "", "audioFilePath": "../../../public/audio/05_ich_dachte_ihr_seid_schon_weg.mp3", "title": "ich dachte ihr seid schon weg"}'
+                                        locals='{"id": "ajm03", "author": "", "audioFilePath": "../../../public/audio/AJM_03.mp3", "title": "ich dachte ihr seid schon weg"}'
                                     >
                                     </include>
                                 </div>
