--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -37,7 +37,7 @@
                         <div class="mx-auto w-4/5 pt-2 md:w-3/5 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "", "author": "", "title": "", "audioFilePath": "../../../public/audio/01_J_R_01.mp3"}'
+                                locals='{"id": "", "author": "", "title": "", "audioFilePath": "../../../public/audio/J_R_01.mp3"}'
                             ></include>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         <div class="mx-auto w-3/5 pt-8 md:w-4/5 md:pb-24 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "mm04", "author": "", "audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
+                                locals='{"id": "mm04", "author": "", "audioFilePath": "../../../public/audio/MM_04.mp3", "title": "die kannten keine Schwarzen"}'
                             >
                             </include>
                         </div>
@@ -111,7 +111,7 @@
                         <div class="z-10 hidden w-full translate-y-[195%] md:block">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"id": "a_d01", "author": "", "audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
+                                locals='{"id": "a_d01", "author": "", "audioFilePath": "../../../public/audio/A_D_01.mp3", "title": "ein freundschaftliches Verhältnis"}'
                             >
                             </include>
                         </div>
