--- a/src/html/virtual-exhibits/ve5.html
+++ b/src/html/virtual-exhibits/ve5.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <div class="h-fit w-full pt-8 md:w-1/3 md:pt-44">
+                <div class="h-fit w-full pt-8 md:z-50 md:w-1/3 md:pt-44">
                     <div class="flex flex-col items-center justify-between md:-translate-x-[5%] md:items-stretch md:justify-start">
                         <div data-lang-key="ve5-5" class="w-3/5 text-left md:w-auto">
                             Die Polizei ist so aggressiv heute.<br />Ich weiß nicht was sie für Idee oder welche Orientierung die haben.
@@ -189,7 +189,9 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit flex-col items-center justify-between pt-8 md:-translate-y-[15%] md:flex-row md:items-end md:pt-0">
+                <div
+                    class="flex h-fit flex-col items-center justify-between pt-8 md:z-0 md:-translate-y-[15%] md:flex-row md:items-end md:pt-0"
+                >
                     <div class="order-2 w-full pt-8 md:order-none md:w-2/5 md:pt-0">
                         <!-- Audio "ich war ein richtiger Sklave" -->
                         <div class="mx-auto w-3/5 pt-8 md:mr-auto md:w-4/5 md:-translate-y-[250%] md:pt-0">
